--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "",
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": ""
+		"dev": "",
+		"test": "set ENV=test && mocha -t 5000",
+		"m-up": "db-migrate up",
+		"m-down": "db-migrate reset"
 	},
 	"keywords": [],
 	"author": "",
@@ -25,9 +27,12 @@
 		"jsonwebtoken": "^9.0.0",
 		"multer": "^1.4.5-lts.1",
 		"multer-storage-cloudinary": "^4.0.0",
+		"nodemailer": "^6.9.1",
 		"pg": "^8.9.0",
 		"raw-body": "^2.5.2",
+		"slugify": "^1.6.5",
 		"swagger-ui-express": "^4.6.1",
+		"uuid": "^9.0.0",
 		"validator": "^13.9.0",
 		"winston": "^3.8.2"
 	},
@@ -42,9 +47,11 @@
 		"@types/mocha": "^10.0.1",
 		"@types/multer": "^1.4.7",
 		"@types/node": "^18.14.2",
+		"@types/nodemailer": "^6.4.7",
 		"@types/pg": "^8.6.6",
 		"@types/supertest": "^2.0.12",
 		"@types/swagger-ui-express": "^4.1.3",
+		"@types/uuid": "^9.0.1",
 		"@types/validator": "^13.7.12",
 		"@typescript-eslint/eslint-plugin": "^5.53.0",
 		"chai": "^4.3.7",
