--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "",
-		"dev": "",
+		"dev": "nodemon ./src/server.ts",
 		"test": "set ENV=test && mocha -t 5000",
 		"m-up": "db-migrate up",
 		"m-down": "db-migrate reset"
