--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,13 @@
 {
-	"semi": true,
-	"singleQuote": true,
-	"useTabs": true,
-	"arrowParens": "avoid"
+  "printWidth": 80,
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "proseWrap": "never",
+  "htmlWhitespaceSensitivity": "strict",
+  "endOfLine": "lf"
 }
