--- a/package.json
+++ b/package.json
@@ -4,18 +4,26 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"lint": "eslint .",
 		"start": "start ./dist/server.js",
 		"dev": "nodemon ./src/server.ts",
-		"test": "set ENV=test && mocha -t 5000",
 		"m-up": "db-migrate up",
-		"m-down": "db-migrate reset"
+		"m-down": "db-migrate reset",
+		"test:watch": "mocha --watch",
+		"test:all": "mocha './src/**/*.spec.js' --watch",
+		"test": "set ENV=test mocha -t 5000",
+		"test:coverage": "nyc --reporter=html mocha",
+		"posttest:coverage": "open-cli ./coverage/index.html",
+		"start:dev:watch": "npm-run-all tsc --parallel start:dev build:watch",
+		"start:debug": "node --inspect-brk app",
+		"start:tsdev": "ts-node-dev src/server.ts",
+		"coverage": "nyc npm run test"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"bcrypt": "^5.1.0",
-		"cloudinary": "^1.34.0",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"csrf": "^3.1.0",
@@ -26,7 +34,6 @@
 		"ioredis": "^5.3.1",
 		"jsonwebtoken": "^9.0.0",
 		"multer": "^1.4.5-lts.1",
-		"multer-storage-cloudinary": "^4.0.0",
 		"nodemailer": "^6.9.1",
 		"pg": "^8.9.0",
 		"raw-body": "^2.5.2",
@@ -53,19 +60,24 @@
 		"@types/swagger-ui-express": "^4.1.3",
 		"@types/uuid": "^9.0.1",
 		"@types/validator": "^13.7.12",
-		"@typescript-eslint/eslint-plugin": "^5.53.0",
+		"@typescript-eslint/eslint-plugin": "^5.54.1",
+		"@typescript-eslint/parser": "^5.54.1",
 		"chai": "^4.3.7",
 		"db-migrate": "^0.11.13",
 		"db-migrate-pg": "^1.2.2",
-		"eslint": "^8.35.0",
-		"eslint-config-standard-with-typescript": "^34.0.0",
-		"eslint-plugin-import": "^2.27.5",
-		"eslint-plugin-n": "^15.6.1",
-		"eslint-plugin-promise": "^6.1.1",
+		"eslint": "^8.2.0",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-airbnb-typescript": "^17.0.0",
+		"eslint-config-prettier": "^8.7.0",
+		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-prettier": "^4.2.1",
 		"mocha": "^10.2.0",
 		"nodemon": "^2.0.20",
+		"npm-run-all": "^4.1.5",
+		"nyc": "^15.1.0",
 		"prettier": "^2.8.4",
 		"ts-node": "^10.9.1",
+		"ts-node-dev": "^2.0.0",
 		"typescript": "^4.9.5"
 	}
 }
