--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"nodemailer": "^6.9.1",
 		"pg": "^8.9.0",
 		"raw-body": "^2.5.2",
+		"sharp": "^0.31.3",
 		"slugify": "^1.6.5",
 		"swagger-ui-express": "^4.6.1",
 		"uuid": "^9.0.0",
@@ -56,6 +57,7 @@
 		"@types/node": "^18.14.2",
 		"@types/nodemailer": "^6.4.7",
 		"@types/pg": "^8.6.6",
+		"@types/sharp": "^0.31.1",
 		"@types/supertest": "^2.0.12",
 		"@types/swagger-ui-express": "^4.1.3",
 		"@types/uuid": "^9.0.1",
