--- a/package.json
+++ b/package.json
@@ -1,85 +1,85 @@
 {
-	"name": "api",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"lint": "eslint .",
-		"start": "start ./dist/server.js",
-		"dev": "nodemon ./src/server.ts",
-		"m-up": "db-migrate up",
-		"m-down": "db-migrate reset",
-		"test:watch": "mocha --watch",
-		"test:all": "mocha './src/**/*.spec.js' --watch",
-		"test": "set ENV=test mocha -t 5000",
-		"test:coverage": "nyc --reporter=html mocha",
-		"posttest:coverage": "open-cli ./coverage/index.html",
-		"start:dev:watch": "npm-run-all tsc --parallel start:dev build:watch",
-		"start:debug": "node --inspect-brk app",
-		"start:tsdev": "ts-node-dev src/server.ts",
-		"coverage": "nyc npm run test"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"bcrypt": "^5.1.0",
-		"cookie-parser": "^1.4.6",
-		"cors": "^2.8.5",
-		"csrf": "^3.1.0",
-		"dotenv": "^16.0.3",
-		"express": "^4.18.2",
-		"helmet": "^6.0.1",
-		"hpp": "^0.2.3",
-		"ioredis": "^5.3.1",
-		"jsonwebtoken": "^9.0.0",
-		"multer": "^1.4.5-lts.1",
-		"nodemailer": "^6.9.1",
-		"pg": "^8.9.0",
-		"raw-body": "^2.5.2",
-		"sharp": "^0.31.3",
-		"slugify": "^1.6.5",
-		"swagger-ui-express": "^4.6.1",
-		"uuid": "^9.0.0",
-		"validator": "^13.9.0",
-		"winston": "^3.8.2"
-	},
-	"devDependencies": {
-		"@types/bcrypt": "^5.0.0",
-		"@types/chai": "^4.3.4",
-		"@types/cookie-parser": "^1.4.3",
-		"@types/cors": "^2.8.13",
-		"@types/express": "^4.17.17",
-		"@types/hpp": "^0.2.2",
-		"@types/jsonwebtoken": "^9.0.1",
-		"@types/mocha": "^10.0.1",
-		"@types/multer": "^1.4.7",
-		"@types/node": "^18.14.2",
-		"@types/nodemailer": "^6.4.7",
-		"@types/pg": "^8.6.6",
-		"@types/sharp": "^0.31.1",
-		"@types/supertest": "^2.0.12",
-		"@types/swagger-ui-express": "^4.1.3",
-		"@types/uuid": "^9.0.1",
-		"@types/validator": "^13.7.12",
-		"@typescript-eslint/eslint-plugin": "^5.54.1",
-		"@typescript-eslint/parser": "^5.54.1",
-		"chai": "^4.3.7",
-		"db-migrate": "^0.11.13",
-		"db-migrate-pg": "^1.2.2",
-		"eslint": "^8.2.0",
-		"eslint-config-airbnb-base": "^15.0.0",
-		"eslint-config-airbnb-typescript": "^17.0.0",
-		"eslint-config-prettier": "^8.7.0",
-		"eslint-plugin-import": "^2.25.2",
-		"eslint-plugin-prettier": "^4.2.1",
-		"mocha": "^10.2.0",
-		"nodemon": "^2.0.20",
-		"npm-run-all": "^4.1.5",
-		"nyc": "^15.1.0",
-		"prettier": "^2.8.4",
-		"ts-node": "^10.9.1",
-		"ts-node-dev": "^2.0.0",
-		"typescript": "^4.9.5"
-	}
+  "name": "api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "lint": "eslint .",
+    "start": "start ./dist/server.js",
+    "dev": "nodemon ./src/server.ts",
+    "m-up": "db-migrate up",
+    "m-down": "db-migrate reset",
+    "test:watch": "mocha --watch",
+    "test:all": "mocha './src/**/*.spec.js' --watch",
+    "test": "set ENV=test mocha -t 5000",
+    "test:coverage": "nyc --reporter=html mocha",
+    "posttest:coverage": "open-cli ./coverage/index.html",
+    "start:dev:watch": "npm-run-all tsc --parallel start:dev build:watch",
+    "start:debug": "node --inspect-brk src/server.ts",
+    "start:tsdev": "ts-node-dev src/server.ts",
+    "coverage": "nyc npm run test"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "csrf": "^3.1.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "helmet": "^6.0.1",
+    "hpp": "^0.2.3",
+    "ioredis": "^5.3.1",
+    "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
+    "pg": "^8.9.0",
+    "raw-body": "^2.5.2",
+    "sharp": "^0.31.3",
+    "slugify": "^1.6.5",
+    "swagger-ui-express": "^4.6.1",
+    "uuid": "^9.0.0",
+    "validator": "^13.9.0",
+    "winston": "^3.8.2"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/chai": "^4.3.4",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/hpp": "^0.2.2",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/mocha": "^10.0.1",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^18.14.2",
+    "@types/nodemailer": "^6.4.7",
+    "@types/pg": "^8.6.6",
+    "@types/sharp": "^0.31.1",
+    "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^9.0.1",
+    "@types/validator": "^13.7.12",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
+    "chai": "^4.3.7",
+    "db-migrate": "^0.11.13",
+    "db-migrate-pg": "^1.2.2",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.2.1",
+    "mocha": "^10.2.0",
+    "nodemon": "^2.0.20",
+    "npm-run-all": "^4.1.5",
+    "nyc": "^15.1.0",
+    "prettier": "^2.8.4",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.5"
+  }
 }
