--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "csrf": "^3.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.15.0",
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
     "ioredis": "^5.3.1",
     "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "pg": "^8.9.0",
@@ -41,7 +43,6 @@
     "slugify": "^1.6.5",
     "swagger-ui-express": "^4.6.1",
     "uuid": "^9.0.0",
-    "validator": "^13.9.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
@@ -53,6 +54,7 @@
     "@types/hpp": "^0.2.2",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mocha": "^10.0.1",
+    "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.14.2",
     "@types/nodemailer": "^6.4.7",
@@ -61,7 +63,6 @@
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.1",
-    "@types/validator": "^13.7.12",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "chai": "^4.3.7",
