--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
+    "google-auth-library": "^8.7.0",
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
     "ioredis": "^5.3.1",
