--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "lint": "eslint .",
     "start": "start ./dist/server.js",
     "dev": "nodemon ./src/server.ts",
+    "build": "tsc",
+    "build:watch": "tsc --watch",
     "m-up": "db-migrate up",
     "m-down": "db-migrate reset",
     "test:watch": "mocha --watch",
