--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "build:watch": "tsc --watch",
     "m-up": "db-migrate up",
     "m-down": "db-migrate reset",
+    "m-down:test": "db-migrate --env test reset",
     "test:watch": "mocha --watch",
-    "test:all": "mocha './src/**/*.spec.js' --watch",
-    "test": "set ENV=test mocha -t 5000",
+    "test:all": "mocha './src/**/*.spec.ts' --watch",
+    "test": "set ENV=TEST&& db-migrate --env test up && mocha && db-migrate --env test reset",
     "test:coverage": "nyc --reporter=html mocha",
     "posttest:coverage": "open-cli ./coverage/index.html",
-    "start:dev:watch": "npm-run-all tsc --parallel start:dev build:watch",
+    "start:dev:watch": "npm-run-all tsc --parallel start:tsdev build:watch",
     "start:debug": "node --inspect-brk src/server.ts",
     "start:tsdev": "ts-node-dev src/server.ts",
     "coverage": "nyc npm run test"
@@ -82,6 +83,7 @@
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "prettier": "^2.8.4",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
