--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:watch": "mocha --watch",
     "test:all": "mocha './src/**/*.spec.ts' --watch",
     "test": "set ENV=TEST&& db-migrate --env test up && mocha && db-migrate --env test reset",
-    "test:coverage": "nyc --reporter=html mocha",
+    "test:coverage": "nyc --reporter=html npm run test",
     "posttest:coverage": "open-cli ./coverage/index.html",
     "start:dev:watch": "npm-run-all tsc --parallel start:tsdev build:watch",
     "start:debug": "node --inspect-brk src/server.ts",
@@ -82,6 +82,7 @@
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
+    "open-cli": "^7.2.0",
     "prettier": "^2.8.4",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
