--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "start": "start ./dist/server.js",
+    "start": "node ./dist/src/server.js",
     "dev": "nodemon ./src/server.ts",
     "build": "tsc",
     "build:watch": "tsc --watch",
