--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "google-auth-library": "^8.7.0",
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
+    "imagekit": "^4.1.3",
     "ioredis": "^5.3.1",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
